--- a/images/application.qrc
+++ b/images/application.qrc
@@ -1,4 +1,4 @@
-<RCC>
+<RCC> 
     <qresource prefix="/" >
         <file>1downarrow.png</file>
         <file>1uparrow.png</file>
@@ -45,7 +45,7 @@
         <file>network_incoming_lan.png</file>
         <file>network_outgoing_lan.png</file>
         <file>noeud.png</file>
-        <file>portugal.png</file>
+        <file>portugal.png</file>  
         <file>project_open.png</file>
         <file>redo.png</file>
         <file>reload.png</file>
@@ -68,5 +68,7 @@
         <file>variable.png</file>
         <file>warning.png</file>
         <file>window_new.png</file>
+ 
+		<file alias="coffee.qss">../qss/coffee.qss</file>
     </qresource>
 </RCC>
